fixed unique section overflow

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -141,9 +141,14 @@
     }
 
     .unique-section-img {
-        width: 370px;
+        width: 100%;
         height: 226px;
         object-fit: cover;
         object-position: 0 60%;
+    }
+
+    .unique-section-card {
+        width: 100%;
+        box-sizing: border-box;
     }
 }
